--- a/config/vhosts/default.conf
+++ b/config/vhosts/default.conf
@@ -1,5 +1,5 @@
-<VirtualHost *:80>
-    ServerAdmin webmaster@localhost
+<VirtualHost *:90>
+    ServerAdmin webmaster@9090
     DocumentRoot ${APACHE_DOCUMENT_ROOT}
     ServerName localhost
 	<Directory ${APACHE_DOCUMENT_ROOT}>
